[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/go-do/scripts/nodoTask.gd" type="Script" id=1]

[node name="nodoTask" type="GraphNode"]
margin_right = 200.0
margin_bottom = 80.0
mouse_filter = 1
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 220.0
margin_bottom = 38.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 204.0
margin_bottom = 14.0
size_flags_horizontal = 7
size_flags_vertical = 7
alignment = 1

[node name="title_node" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 204.0
margin_bottom = 14.0
size_flags_horizontal = 7
size_flags_vertical = 6
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 39.0
margin_right = 220.0
margin_bottom = 59.0

[node name="edit" type="Button" parent="HBoxContainer"]
margin_right = 100.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
text = "..."
align = 0

[node name="delete" type="Button" parent="HBoxContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
text = "x"
align = 2

[node name="warning_delete_childs" type="ConfirmationDialog" parent="."]
margin_left = 16.0
margin_top = 80.0
margin_right = 240.0
margin_bottom = 158.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Por favor, Confirma..."
dialog_text = "Se eliminaran los nodos hijos"

[connection signal="close_request" from="." to="." method="_on_nodoTask_close_request"]
[connection signal="pressed" from="HBoxContainer/edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="HBoxContainer/delete" to="." method="_on_delete_pressed"]
[connection signal="confirmed" from="warning_delete_childs" to="." method="_on_warning_delete_childs_confirmed"]
